--- a/stylesheets/site.css
+++ b/stylesheets/site.css
@@ -353,5 +353,126 @@ td,
 th {
   padding: 0; }
 
+.offer-item, .vet {
+  text-align: center; }
+  @media screen and (min-width: 768px) {
+    .offer-item, .vet {
+      width: 33.333%;
+      float: left; } }
+
+* {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box; }
+
+html, body {
+  height: 100%; }
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0; }
+
 body {
-  background: #aac83e; }
+  font-family: "PT Sans", sans-serif;
+  color: #333;
+  font-size: 14px;
+  background: white;
+  min-height: 100%;
+  line-height: 1.5; }
+  @media screen and (min-width: 1024px) {
+    body {
+      font-size: 16px; } }
+
+h1 {
+  color: #20CFE4;
+  text-align: center;
+  margin: 3rem 0; }
+
+section {
+  overflow: hidden; }
+
+.wrapper {
+  max-width: 1420px;
+  margin: 0 auto;
+  padding: 0 2rem; }
+
+header {
+  height: 6rem;
+  border-bottom: 0.5rem solid #e7f8fc; }
+  header .wrapper {
+    height: 100%; }
+
+.logo {
+  height: 100%;
+  padding: 1rem 0;
+  float: left; }
+
+.navigation {
+  float: right; }
+
+.nav-item {
+  display: inline-block;
+  float: left; }
+  .nav-item a {
+    line-height: 6rem;
+    padding: 0 2rem; }
+
+.banner {
+  background: url("../images/pies.jpg") center center no-repeat;
+  background-size: cover;
+  height: 60%;
+  padding: 8rem 4rem; }
+
+.banner-title {
+  font-size: 1.5rem;
+  margin: 1rem 0;
+  color: #333;
+  text-align: left; }
+  .banner-title .big-text {
+    font-size: 2rem; }
+
+.service-item {
+  margin: 0 0 1.5rem; }
+
+.quote-wrapper {
+  background-color: #e7f8fc;
+  padding: 4rem; }
+
+.quote {
+  max-width: 700px;
+  margin: 0 auto;
+  width: 90%;
+  text-align: center;
+  font-size: 1.5rem;
+  font-weight: 600;
+  color: #1A1A4E; }
+
+.quote-decor {
+  margin: 0 auto;
+  font-size: 10rem;
+  line-height: 1rem;
+  margin-top: 4rem;
+  color: #FFB236; }
+
+.quote-content {
+  margin: 0 0 1rem; }
+
+.quote-author {
+  font-size: 1.2rem;
+  color: #86AEB7; }
+
+.vet-photo-holder {
+  margin: 0 auto 2rem;
+  width: 9rem;
+  height: 9rem;
+  border-radius: 50%;
+  border: 0.4rem solid #e7f8fc;
+  overflow: hidden; }
+
+.vet-photo {
+  width: 100%; }
+
+.vet-description {
+  max-width: 80%;
+  margin: 1rem auto; }
