WIP: Add another quote and contact sections

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -50,9 +50,7 @@
   .quote
     .quote-decor ”
     %p.quote-content
-      „Ekstra sprawa, świetne słuchawki, pieskowi odrosła łapa.
-      %br
-      Ma teraz pięć! Pozdrawiam.”
+      „Ekstra sprawa, świetne słuchawki, pieskowi odrosła łapa. Ma teraz pięć! Pozdrawiam.”
     %p.quote-author - Małgorzata Belzebub
 %section.wrapper
   %h1 Nasi lekarze
@@ -72,3 +70,30 @@
         %img.vet-photo{:src => "images/bill.jpg"}
       %h2 Wiesław Rutka
       %p.vet-description Absolwent Wydziału Weterynarii Akademii Rolniczej we Wrocławiu z 1985 roku. Specjalista chorób psów i kotów. Specjalista chirurg.
+%section.quote-wrapper
+  .quote
+    %p.quote-content
+      Coś tutaj
+%section.wrapper
+  %h1 Kontakt
+  .contact
+    .contact-section
+      %h2 Vet-Med przychodnia weterynaryjna
+      %p
+        ul. Dębowa 6a
+        %br
+        43-100 Tychy
+      %p
+        telefon: (32) 227 31 12
+      %p
+        email: vet.med.tychy@gmail.com
+    .contact-section
+      %h2 Godziny otwarcia
+      %p
+        poniedziałek - piątek: 8:00 - 20:00
+        %br
+        sobota: 8:00 - 12:00
+        %br
+        niedziela: 9:00 - 12:00
+  .map
+    %img.google-map{:src => "images/bill.jpg"}
