--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -1,33 +1,34 @@
 %header
-  .wrapper
+  .header-wrapper
     %img.logo{:src => "images/vetmed_logo.png"}
     %nav{:role => "navigation"}
       %ul.navigation
         %li.nav-item
-          %a{:href => "#"}
+          %a{:href => "#offer"}
             USŁUGI
         %li.nav-item
-          %a{:href => "#"}
+          %a{:href => "#vets"}
             LEKARZE
         %li.nav-item
-          %a{:href => "#"}
+          %a{:href => "#contact"}
             KONTAKT
 %section.banner
   .wrapper
     %h1.banner-title
       Pierwsza prywatna
       %br
-      %span.big-text przychodnia weterynaryjna w Tychach.
-    %h1.banner-title Lekarze z ponad 25 letnim doświadczeniem.
+      %span.big-text przychodnia weterynaryjna w&nbsp;Tychach.
+    %h1.banner-title Lekarze z&nbsp;ponad 25&nbsp;letnim doświadczeniem.
     %h1.banner-title
-      Usługi w zakresie lecznictwa i profilaktyki
+      Usługi w zakresie lecznictwa i&nbsp;profilaktyki
       %br
       chorób małych zwierząt.
-%section.wrapper
+%section.wrapper.offers-container#offer
   %h1 Oferowane usługi
   %ul.offer
     - data.all.offer.each do |offer|
-      %li.offer-item
+      %li.offer-item{ :class => offer.id }
+        .offer-icon
         %h2= offer.section
         %ul
           - offer.items.each do |item|
@@ -38,7 +39,7 @@
     - quote = data.quotes.sample
     %p.quote-content= quote.content
     %p.quote-author - #{quote.author}
-%section.wrapper
+%section.wrapper.vets-container#vets
   %h1 Nasi lekarze
   %ul.vets
     - data.all.vets.each do |vet|
@@ -53,17 +54,23 @@
     - quote = data.quotes.sample
     %p.quote-content= quote.content
     %p.quote-author - #{quote.author}
-%section.wrapper
+%section.wrapper.contact-container#contact
   %h1 Kontakt
   .contact
     .contact-section
       - contact = data.all.contact
       %h2= contact.name
       %p= contact.address
-      %p telefon: #{contact.phone}
+      %p
+        telefon:
+        %span{ :itemprop => "telephone"} #{contact.phone}
     .contact-section
       %h2 Godziny otwarcia
       - data.all.opening_hours.each do |open|
         %p #{open.days}: #{open.hours}
   .map
-    %img.google-map{:src => lorem.image('500x500')}
+    %a.map-link{:href => "https://goo.gl/maps/PoC4MUM4JyM2"}
+      %image.map-screen{:src => "images/map.png"}
+    %iframe{ :src =>"https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2558.4814685272036!2d18.987755051604818!3d50.11471191927877!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4716c80205e7abbd%3A0x35f07a03fd58b62!2sD%C4%99bowa+6A%2C+43-100+Tychy!5e0!3m2!1sen!2spl!4v1457183958779", :width => "600", :height => "450", :frameborder => "0", :style => "border:0", :allowfullscreen => "true" }
+%footer
+  Hejo Dzieci!
