--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -7,9 +7,11 @@ $cyan: #20CFE4;
 $asphalt: #1A1A4E;
 
 $accent: #FFB236;
+$snow: #f2f2f2;
 
 //breakpoints
 
 $big-mobile: 768px;
 $desktop: 1024px;
+$big-desktop: 1420px;
 
