--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -77,4 +77,12 @@
       %image.map-screen{:src => "images/map.png"}
     %iframe{ :src =>"https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2558.4814685272036!2d18.987755051604818!3d50.11471191927877!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4716c80205e7abbd%3A0x35f07a03fd58b62!2sD%C4%99bowa+6A%2C+43-100+Tychy!5e0!3m2!1sen!2spl!4v1457183958779", :width => "600", :height => "450", :frameborder => "0", :style => "border:0", :allowfullscreen => "true" }
 %footer
-  Hejo Dzieci!
+  © 2016 #{contact.name}
+  %br
+  .credits
+    Icons made by
+    %a{ :href =>"http://www.freepik.com", :title =>"Freepik" } Freepik
+    from
+    %a{ :href =>"http://www.flaticon.com", :title =>"Flaticon" } www.flaticon.com
+    is licensed by
+    %a{ :href =>"http://creativecommons.org/licenses/by/3.0/", :title => "Creative Commons BY 3.0", :target => "_blank" } CC 3.0 BY
