footer credits style

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -370,3 +370,13 @@ footer {
   position: relative;
   opacity: 1;
 }
+
+.credits {
+  color: #A0A0A0;
+  margin: 1rem 0 0;
+  font-size: 0.8rem;
+  a {
+    color: #a0a0a0;
+    text-decoration: none;
+  }
+}
